--- a/components/orderCard/orderCard.wxml
+++ b/components/orderCard/orderCard.wxml
@@ -1,7 +1,7 @@
 <!--components/orderCard.wxml-->
 <!-- wx:if="{{detailInfo.bigThan30}}" -->
 <view id="orderCard" wx:if="{{smallThan24h}}" bindtap="changeCheck"
-	class="ml10 mr10 mt20 bgColorWhite jcsb flexWarp borderRadius16 borderBox pt10 pb10 colorBlack por overfh {{isBig?'':'vw98 shadow pl10 pr10'}}">
+	class="ml10 mr10 mt10 bgColorWhite jcsb flexWarp borderRadius16 borderBox pt10 pb10 colorBlack por overfh {{isBig?'':'vw98 shadow pl10 pr10'}}">
 	<view class="flex jcsb aic">
 		<view class="fz35 flex blod aic" bind:click="someFunction" catchtap="changeShow">
 			<view class="overfh vw53" style="text-overflow:ellipsis;white-space: nowrap;"
@@ -61,6 +61,7 @@
 			<view class="flex jcsb">
 				<view wx:if="{{detailInfo.date}}">{{detailInfo.date}}</view>
 				<view wx:if="{{detailInfo.systemPrice}}">系统报价：{{detailInfo.systemPrice}}{{detailInfo.unit}}</view>
+				<view wx:if="{{detailInfo.reimbursementPrice}}">￥{{detailInfo.reimbursementPrice}}</view>
 			</view>
 			<view wx:if="{{detailInfo.productLen && !notShowProLen}}" class="poa fz25" style="right:0;bottom:25%">
 				{{detailInfo.allNumber}}({{detailInfo.nowNumber-detailInfo.allNumber<0?(detailInfo.nowNumber-detailInfo.allNumber):((detailInfo.nowNumber-detailInfo.allNumber)===0?0:'+'+(detailInfo.nowNumber-detailInfo.allNumber))}})
@@ -86,10 +87,11 @@
 			class="poa bgColor8D9F colorWhite borderRadius16 pl10 pb8 pr15 pt5 cornerStyle">已通过</view>
 	</view>
 	<!-- 弹出框 -->
-	<van-popup catchtap show="{{showPopup}}" bindtap="closePopup">
+	<van-popup catchtap show="{{showPopup}}" custom-class="noBgColor" bindtap="closePopup">
 		<view class="overfh por">
 			<view class="tc vw100 h100">
-				<image mode="widthFix" show-menu-by-longpress="{{true}}" src="{{detailInfo.imgSrc}}" style="display:block">
+				<image mode="widthFix" show-menu-by-longpress="{{true}}" src="{{detailInfo.imgSrc}}"
+					style="display:block;margin:0 auto">
 				</image>
 			</view>
 		</view>
